--- a/angular frontend/angular-crud/src/app/components/tutorial-list/tutorial-list.component.html
+++ b/angular frontend/angular-crud/src/app/components/tutorial-list/tutorial-list.component.html
@@ -32,9 +32,9 @@
       </ul>      
     </div>
     <div class="col-md-6">
-      <app-tutorial-details
+      <app-tutorial-detail
         [viewMode]="true"
         [currentTutorial]="currentTutorial"
-      ></app-tutorial-details>
+      ></app-tutorial-detail>
     </div>
 </div>
